--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Word Tuah - A fun word guessing game" />
+    <meta name="description" content="Skibinuli" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#121213" />
     <meta name="color-scheme" content="light dark" />
